Fix mobile alignment

--- a/src/app/movie-detail/movie-detail.component.css
+++ b/src/app/movie-detail/movie-detail.component.css
@@ -84,8 +84,7 @@
   }
 
   .movie-detail-text {
-    width: 100%;
-    text-align: center;
+    width: 100%; 
   }
 
   .rating-section {
